--- a/facebook/AndroidManifest.xml
+++ b/facebook/AndroidManifest.xml
@@ -18,4 +18,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.facebook.android">
     <application/>
+    <uses-sdk
+		android:targetSdkVersion="11"
+		android:minSdkVersion="8" />
 </manifest>
